Move JavaScript files from code/ to root of the repository
The intent is to make the source code more readily available,
and shorten the path to the files when including the repository
as a git submodule.

--- a/tests/assert.html
+++ b/tests/assert.html
@@ -1,4 +1,4 @@
-<script src="../code/assert.js"></script>
+<script src="../assert.js"></script>
 <script>
 window.onerror = function( message ){
   document.write( "ERROR: " + message );
