--- a/tests/not.html
+++ b/tests/not.html
@@ -1,5 +1,5 @@
-<script src="../code/assert.js"></script>
-<script src="../code/not.js"></script>
+<script src="../assert.js"></script>
+<script src="../not.js"></script>
 <script>
 window.onerror = function( message ) {
   document.write( "ERROR: " + message );
