--- a/tests/copy.html
+++ b/tests/copy.html
@@ -1,12 +1,12 @@
 <script src="../assert.js"></script>
 <script src="../not.js"></script>
-<script src="../copyArray.js"></script>
+<script src="../copy.js"></script>
 <script>
 window.onerror = function( message ) {
   document.write( "ERROR: " + message );
 }
 
-var result = copyArray( [] );
+var result = copy( [] );
 assert( !not(result) &&
         result.length === 0,
                                "empty array expected for copy of empty array");
@@ -14,7 +14,7 @@ assert( !not(result) &&
 var object = { id: 'one' };
 var number = 42;
 var array = [1,2,3];
-result = copyArray( [object,number,array] );
+result = copy( [object,number,array] );
 assert( !not(result) &&
         result.length === 3 &&
         result[0] === object &&
