--- a/tests/copy.html
+++ b/tests/copy.html
@@ -1,5 +1,5 @@
 <script src="../assert.js"></script>
-<script src="../not.js"></script>
+<script src="../no.js"></script>
 <script src="../copy.js"></script>
 <script>
 window.onerror = function( message ) {
@@ -7,7 +7,7 @@ window.onerror = function( message ) {
 }
 
 var result = copy( [] );
-assert( !not(result) &&
+assert( !no(result) &&
         result.length === 0,
                                "empty array expected for copy of empty array");
 
@@ -15,7 +15,7 @@ var object = { id: 'one' };
 var number = 42;
 var array = [1,2,3];
 result = copy( [object,number,array] );
-assert( !not(result) &&
+assert( !no(result) &&
         result.length === 3 &&
         result[0] === object &&
         result[1] === number &&
