Simplify signature of test(), returning result directly
I removed the callback; the outcome message is now returned
by test() directly instead of the boolean result. The boolean
result of the test can be achieved by comparing the first letter
of the outcome with 'S' (SUCCESS) or 'E' (ERROR: ...).

--- a/tests/bind.html
+++ b/tests/bind.html
@@ -2,7 +2,7 @@
 <script src="../assert.js"></script>
 <script src="../bind.js"></script>
 <script>
-test(function(){
+document.write( test(function(){
 
   var
     context,
@@ -43,5 +43,5 @@ test(function(){
     result === EXPECTED_RESULT,
        "bound function must be called likewise when no argument is provided");
 
-}, bind( document.write, document ) );
+}) );
 </script>
