--- a/tests/assert.html
+++ b/tests/assert.html
@@ -1,8 +1,7 @@
 <script src="test.js"></script>
 <script src="../assert.js"></script>
-<script src="../bind.js"></script>
 <script>
-test(function(){
+document.write( test(function(){
 
   try {
     assert( true,                                            "assert(true)" );
@@ -49,5 +48,5 @@ test(function(){
   checkException([1,2,3]);
   checkException(42);
 
-}, bind( document.write, document ) );
+}) );
 </script>
