--- a/tests/forEach.html
+++ b/tests/forEach.html
@@ -13,7 +13,7 @@ document.write( test(function(){
     captured = [],
     result;
 
-  function capture( item, i ){
+  function capture( item, i ) {
     captured.push( "item" + count, item, i );
     count++;
   }
@@ -52,13 +52,13 @@ document.write( test(function(){
   count = 0;
   captured = [];
 
-  function interrupt(item){
+  function interrupt( item ) {
     stop--;
     captured.push(item);
     return ( stop === 0 );
   }
 
-  result = forEach( [ONE,TWO,THREE,4,5,6,7,8,9,10], interrupt );
+  result = forEach( [ONE, TWO, THREE, 4, 5, 6, 7, 8, 9, 10], interrupt );
 
   assert(
     captured.length === 3 &&
