Remove useless quotes around regular property name

--- a/tests/remove.html
+++ b/tests/remove.html
@@ -9,7 +9,7 @@ document.write( test(function() {
     ONE = 1,
     TWO = "two",
     THREE = {
-      "three": /3/
+      three: /3/
     };
 
   array = [];
