Rename function not() to no() in comment

--- a/tests/no.html
+++ b/tests/no.html
@@ -8,7 +8,7 @@ document.write( test(function() {
   assert( no( undefined ),      "TEST1: no() must return true for undefined" );
 
   /*
-    Check that not() returns false for values different from null and undefined
+    Check that no() returns false for values different from null and undefined
   */
   function checkFalseFor( value ) {
     var result = no( value );
